examples/test/testpolicy9824.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9824
  namespace: namespace253
spec:
  podSelector:
    matchLabels:
      key18: value41
      key10: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value36
      podSelector:
        matchLabels:
          key39: value13
          key11: value22
